Working on sidebar 01

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <aside>
 <h1>Sidebar header</h1>
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+</ul>
 </aside>
 
 </body>
